<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="qulity">It is now very easy to reach the\nbest quality among the\nproducts on the internet!</string>
    <string name="start">Start</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_text">Let\'s Login</string>
    <string name="email">Email</string>
    <string name="don_t_have_account">Don\'t have an account? Register</string>
    <string name="password">Password</string>
    <string name="forgor_password">Forgor password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_message">We will send you the password reset link to your email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="search_news">Search Now</string>
    <string name="deals">Best deals</string>
    <string name="products">Best products</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="premium">Scotch Premium</string>
    <string name="cost">$2000</string>
    <string name="_1600">$1600</string>
    <string name="product">See product</string>
    <string name="text">LofCoding</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="total">Total</string>
    <string name="check_out">Check out</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="short_definition">Keline dose not support virtual payments. You can pay when you receive your order.</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="name">Name</string>
    <string name="personal_details">edit personal details</string>
    <string name="orders">Orders</string>
    <string name="all_orders">All orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="billing">Billing</string>
    <string name="notifications">Notifications</string>
    <string name="regional">Regional</string>
    <string name="logout">Logout</string>
    <string name="version">Version 1.0</string>
    <string name="settings">Settings</string>
    <string name="chair">Chair</string>
    <string name="temp_cost">$1600</string>

</resources>